test/conformance/reject/nested_top_level.hdoc
hdoc(version="2.0", lang="en");

note {
  h1 "Nested heading"
}
